--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,7 +11,9 @@ packages = [
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.8,<4.0"
+python = ">=3.9,<4.0"
+pandas = "^2.2.1"
+cyclonedx-bom = "^4.1.2"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^7.2.0"
