--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,15 @@ jobs:
       - name: Run checks
         run: make check
 
+      - name: Generate SBOM
+        run: make sbom
+
+      - name: Store SBOM artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: sbom
+          path: ./sbom.json
+
   tox:
     runs-on: ubuntu-latest
     strategy:
