--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,6 +25,18 @@ jobs:
       - name: Run checks
         run: make check
 
+ sbom:
+      - name: Check out
+        uses: actions/checkout@v3
+
+      - uses: actions/cache@v3
+        with:
+          path: ~/.cache/pre-commit
+          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
+
+      - name: Set up the environment
+        uses: ./.github/actions/setup-poetry-env
+
       - name: Generate SBOM
         run: make sbom
 
@@ -33,7 +45,7 @@ jobs:
         with:
           name: sbom
           path: ./sbom.json
-
+  
   tox:
     runs-on: ubuntu-latest
     strategy:
