--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,21 +25,23 @@ jobs:
       - name: Run checks
         run: make check
 
- sbom:
+  sbom:
+    runs-on: ubuntu-latest
+    steps:
       - name: Check out
         uses: actions/checkout@v3
-
+      
       - uses: actions/cache@v3
         with:
           path: ~/.cache/pre-commit
           key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
-
+    
       - name: Set up the environment
         uses: ./.github/actions/setup-poetry-env
-
+    
       - name: Generate SBOM
         run: make sbom
-
+    
       - name: Store SBOM artifact
         uses: actions/upload-artifact@v4
         with:
