--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
     
       - name: Generate SBOM
         run: make sbom
+        shell: bash
     
       - name: Store SBOM artifact
         uses: actions/upload-artifact@v4
