--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
       - name: Check out
         uses: actions/checkout@v3
       
+      - name: Set up the environment
+        uses: ./.github/actions/setup-poetry-env
+      
       - name: Install node
         uses: actions/setup-node@v4
         with:
