try with container

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
 
   sbom:
     runs-on: ubuntu-latest
+    container:
+      image: ghcr.io/cyclonedx/cdxgen
     steps:
       - name: Check out
         uses: actions/checkout@v3
