--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,11 +27,25 @@ jobs:
 
   sbom:
     runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/cyclonedx/cdxgen
     steps:
       - name: Check out
         uses: actions/checkout@v3
+
+      - name: Set up the environment
+        uses: ./.github/actions/setup-poetry-env
+      
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      
+      - name: Install node
+        uses: actions/setup-node@v4
+        with:
+          node-version: "latest"
+
+      - name: Install cdxgen
+        run: npm install -g @cyclonedx/cdxgen
     
       - name: Generate SBOMs
         run: |
