--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,23 +8,6 @@ on:
     types: [opened, synchronize, reopened]
 
 jobs:
-  quality:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-
-      - uses: actions/cache@v3
-        with:
-          path: ~/.cache/pre-commit
-          key: pre-commit-${{ hashFiles('.pre-commit-config.yaml') }}
-
-      - name: Set up the environment
-        uses: ./.github/actions/setup-poetry-env
-
-      - name: Run checks
-        run: make check
-
   sbom:
     runs-on: ubuntu-latest
     steps:
@@ -52,10 +35,9 @@ jobs:
       - name: Generate VDR
         run: |
           depscan --bom bom.json
-          mv ./reports/depscan-bom.json ./reports/depscan-bom.jsonl  # change extension to make file format more clear
           # move vdr enriched sbom to make it easier to grab as an artifact
-          # if it doesn't exist then just use the exisiting bom
-          mv ./bom.vdr.json ./reports/bom.vdr.json || cat bom.json > ./reports/bom.vdr.json
+          # if it doesn't exist then echo that for reference
+          mv ./bom.vdr.json ./reports/bom.vdr.json || echo "No VDR was generated."
 
       - name: Store SBOM Artifact
         uses: actions/upload-artifact@v4
@@ -68,51 +50,3 @@ jobs:
         with:
           name: vdr
           path: ./reports
-  
-  tox:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        python-version: ["3.9", "3.10", "3.11"]
-      fail-fast: false
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-
-      - name: Set up python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
-
-      - name: Install Poetry
-        uses: snok/install-poetry@v1
-
-      - name: Load cached venv
-        uses: actions/cache@v3
-        with:
-          path: .tox
-          key: venv-${{ runner.os }}-${{ matrix.python-version }}-${{ hashFiles('poetry.lock') }}
-
-      - name: Install tox
-        run: |
-          python -m pip install --upgrade pip
-          python -m pip install tox tox-gh-actions
-
-      - name: Test with tox
-        run: tox
-
-      - name: Upload coverage reports to Codecov with GitHub Action on Python 3.11
-        uses: codecov/codecov-action@v3
-        if: ${{ matrix.python-version == '3.11' }}
-
-  check-docs:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Check out
-        uses: actions/checkout@v3
-
-      - name: Set up the environment
-        uses: ./.github/actions/setup-poetry-env
-
-      - name: Check if documentation can be built
-        run: poetry run mkdocs build -s
